WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
282231
Nullptr crash under RenderTreeBuilder::Inline::splitInlines while transitioning to fullscreen
https://bugs.webkit.org/show_bug.cgi?id=282231
Summary
Nullptr crash under RenderTreeBuilder::Inline::splitInlines while transitioni...
Antti Koivisto
Reported
2024-10-29 03:41:32 PDT
boom
Attachments
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2024-10-29 03:41:48 PDT
rdar://137177522
Antti Koivisto
Comment 2
2024-10-29 03:46:12 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/35857
EWS
Comment 3
2024-10-29 07:49:36 PDT
Committed
285832@main
(30fb035c257c): <
https://commits.webkit.org/285832@main
> Reviewed commits have been landed. Closing PR #35857 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug