Nullptr crash under RenderTreeBuilder::Inline::splitInlines while transitioning to fullscreen https://bugs.webkit.org/show_bug.cgi?id=282231 rdar://137177522

Reviewed by Alan Baradlay.

* LayoutTests/fast/css/fullscreen-style-sharing-crash-expected.txt: Added.
* LayoutTests/fast/css/fullscreen-style-sharing-crash.html: Added.
* Source/WebCore/style/StyleSharingResolver.cpp:
(WebCore::Style::SharingResolver::canShareStyleWithElement const):

We were improperly sharing style between elements that had different top layer status and fullscreen flags.
This led to illegal render tree structure.

Canonical link: https://commits.webkit.org/285832@main